// Copyright 2023 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.userpreferences.v1;

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/userpreferences/v1;userpreferencesv1";

// Resources are the Resource options in the onboarding questionnaire
enum Resource {
  RESOURCE_UNSPECIFIED = 0;
  RESOURCE_WINDOWS_DESKTOPS = 1;
  RESOURCE_SERVER_SSH = 2;
  RESOURCE_DATABASES = 3;
  RESOURCE_KUBERNETES = 4;
  RESOURCE_WEB_APPLICATIONS = 5;
}

// MarketingParams are the parameters associated with a user via marketing campaign at the time of sign up.
// They contain both traditional Urchin Tracking Module (UTM) parameters as well as custom parameters.
message MarketingParams {
  // campaign is the UTM campaign parameter which identifies a specific product promotion
  string campaign = 1;
  // source is the UTM source parameter which identifies which site sent the traffic
  string source = 2;
  // medium is the UTM medium parameter which identifies what type of link was used
  string medium = 3;
  // intent is the internal query param, which identifies any additional marketing intentions
  // via internally set and directed parameters.
  string intent = 4;
}

// OnboardUserPreferences is the user preferences selected during onboarding.
message OnboardUserPreferences {
  // preferredResources is an array of the resources a user selected during their onboarding questionnaire.
  repeated Resource preferred_resources = 1;
  // marketingParams are the parameters associated with a user via marketing campaign at the time of sign up
  MarketingParams marketing_params = 2;
}
